fixing spacing for language switcher for rebranded styles

--- a/src/components/service-navigation-language-select/_service-navigation-language-select.scss
+++ b/src/components/service-navigation-language-select/_service-navigation-language-select.scss
@@ -53,6 +53,14 @@
       margin-top: 0;
       margin-bottom: 0;
       padding: govuk-spacing(4) 0;
+
+      @include _govuk-rebrand {
+        padding: govuk-spacing(3) 0;
+
+        // some magic numbers from govuk-frontend service nav rebrand,
+        // adapted for the 16px font-size of the language switcher
+        line-height: (29 / 16);
+      }
     }
   }
 }
